<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.features.login.signin.SignInFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_400sdp"
        android:background="@drawable/background_top_login" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="-16dp"
        app:cardCornerRadius="@dimen/_18sdp"
        app:cardElevation="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginVertical="@dimen/_48sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sign_in"
                android:textColor="@color/background"
                android:textSize="@dimen/_32ssp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center_horizontal"
                android:text="@string/login_to_continue"
                android:textColor="@color/background"
                android:textSize="@dimen/_12ssp"
                android:textStyle="italic" />

            <com.android.vncalling.ui.custom.view.TextFieldCustom
                android:id="@+id/accountName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                app:drawableEnd="@drawable/ic_delete_text"
                app:imeOption="next"
                app:inputTypes="textEmailAddress"
                app:textHint="Tài khoản"
                tools:text="williamnb.vn@gmail.com" />

            <com.android.vncalling.ui.custom.view.TextFieldCustom
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:drawableEnd="@drawable/ic_delete_text"
                app:imeOption="done"
                app:inputTypes="textPassword"
                app:startIcon="@drawable/ic_lock"
                app:textHint="Mật khẩu"
                tools:text="123456" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:backgroundTint="@color/background"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center_horizontal"
                android:text="@string/forgot_password"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/_40sdp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_3sdp"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:textColor="@color/background"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>