<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.features.login.change_password_success.ChangePasswordSuccessFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_88sdp"
        android:gravity="center"
        android:text="@string/password_update"
        android:textColor="@color/primarySecond"
        android:textSize="@dimen/_32ssp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_circle_password_update"
        android:padding="@dimen/_24sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_88sdp"
            android:layout_height="@dimen/_88sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_done" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center_horizontal"
        android:text="@string/description_change_pass_success"
        android:textColor="@color/primarySecond"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="@color/primarySecond"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/login"
        android:textColor="@color/background"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />
</LinearLayout>