<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_8sdp"
    tools:context=".ui.features.login.update_new_password.UpdateNewPasswordFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBack"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:src="@drawable/ic_back"
        android:tint="@color/background" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/background_circle_verify_code"
        android:padding="@dimen/_16sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_88sdp"
            android:layout_height="@dimen/_88sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_password"
            android:tint="@color/primarySecond" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/update_new_password"
        android:textColor="@color/background"
        android:textSize="@dimen/_23ssp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_6sdp"
        android:gravity="center_horizontal"
        android:text="@string/description_update_new_password"
        android:textColor="@color/background"
        android:textSize="@dimen/_12ssp"
        android:textStyle="italic" />

    <com.android.vncalling.ui.custom.view.TextFieldCustom
        android:id="@+id/textFieldNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:imeOption="next"
        app:inputTypes="numberPassword"
        app:startIcon="@drawable/ic_lock"
        app:textHint="New Password"
        tools:text="123456a@" />

    <com.android.vncalling.ui.custom.view.TextFieldCustom
        android:id="@+id/textFieldConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:imeOption="done"
        app:inputTypes="numberPassword"
        app:startIcon="@drawable/ic_lock"
        app:textHint="Confirm Password"
        tools:text="123456a@" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingVertical="@dimen/_6sdp"
        android:text="@string/update"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold" />
</LinearLayout>