<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.features.calling_screen.OutgoingCallActivity">

    <FrameLayout
        android:id="@+id/remote"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />

    <FrameLayout
        android:id="@+id/local"
        android:layout_width="@dimen/_72sdp"
        android:layout_height="@dimen/_132sdp"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/_8sdp"
        android:visibility="visible">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnSwitch"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_camera_switch" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnCallEnd"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_48sdp"
        android:background="@drawable/background_circle_button_negative"
        android:src="@drawable/ic_clear"
        android:tint="@color/white"
        android:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCallEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCallEnd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/stop"
        android:textSize="@dimen/_13ssp"
        android:textStyle="normal" />

    <LinearLayout
        android:id="@+id/llWaitingCall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_8sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/_88sdp"
                android:layout_height="@dimen/_88sdp"
                android:layout_gravity="center"
                android:scaleType="centerCrop" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCallStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/connecting"
            android:textSize="@dimen/_15ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_28sdp"
            android:gravity="center"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            tools:text="William Nguyen" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/userAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:textSize="@dimen/_14ssp"
            android:textStyle="italic"
            tools:text="williamnb.vn@gmail.com" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnCallCancel"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginTop="@dimen/_64sdp"
            android:background="@drawable/background_circle_button_negative"
            android:src="@drawable/ic_call_reject"
            android:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/cancel"
            android:textSize="@dimen/_13ssp"
            android:textStyle="normal" />
    </LinearLayout>
</RelativeLayout>